# tdd-locker-python

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
app/: locker.py  locker_robot_director.py  locker_robot_manager.py  primary_locker_robot.py  smart_locker_robot.py  super_locker_robot.py
tests/: test_locker.py  test_locker_robot_director.py  test_locker_robot_manager.py  test_primary_locker_robot.py  test_smart_locker_robot.py  test_super_locker_robot.py
