[project]
name = "locker"
version = "0.1.0"
description = ""
authors = [
    {name = "sjmyuan"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0"
]
[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-mock>=3.14.0"
]
[project.scripts]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
